--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,7 @@
         <jackson.version>2.19.2</jackson.version>
         <xstream.version>1.4.21</xstream.version>
         <!-- Scheduling -->
-        <db-scheduler.version>13.0.0</db-scheduler.version><!-- Don't upgrade due to JDK8 -->
+        <db-scheduler.version>16.6.0</db-scheduler.version>
         <jobrunr.version>8.0.1</jobrunr.version>
         <quartz.version>2.4.0</quartz.version>
         <!-- Spring -->
