Ignore 2025 and higher of Spring Data
Ignore 2025 and higher of Spring Data

#4081

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -43,3 +43,5 @@ updates:
       versions: [ "[4.0.0,)" ]
     - dependency-name: "org.springdoc:*"
       versions: [ "[3.0.0,)" ]
+    - dependency-name: "org.springframework.data:*"
+      versions: [ "[2025.0.0,)" ]
