--- a/extensions/spring/pom.xml
+++ b/extensions/spring/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.axonframework.extensions</groupId>
         <artifactId>axon-extensions</artifactId>
-        <version>5.0.2-SNAPSHOT</version>
+        <version>5.0.2</version>
     </parent>
 
     <groupId>org.axonframework.extensions.spring</groupId>
@@ -57,4 +57,8 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+  <scm>
+    <tag>axon-5.0.2</tag>
+  </scm>
 </project>
