--- a/extensions/spring/spring/pom.xml
+++ b/extensions/spring/spring/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.axonframework.extensions.spring</groupId>
         <artifactId>axon-spring-extension</artifactId>
-        <version>5.0.2-SNAPSHOT</version>
+        <version>5.0.2</version>
     </parent>
 
     <artifactId>axon-spring</artifactId>
@@ -279,4 +279,8 @@
             </plugin>
         </plugins>
     </build>
+
+  <scm>
+    <tag>axon-5.0.2</tag>
+  </scm>
 </project>
