--- a/messaging/pom.xml
+++ b/messaging/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.axonframework</groupId>
         <artifactId>axon-parent</artifactId>
-        <version>5.0.2-SNAPSHOT</version>
+        <version>5.0.2</version>
         <relativePath>../build/parent/pom.xml</relativePath>
     </parent>
 
@@ -265,4 +265,8 @@
             </plugin>
         </plugins>
     </build>
+
+  <scm>
+    <tag>axon-5.0.2</tag>
+  </scm>
 </project>
