--- a/extensions/spring/spring-boot-autoconfigure/pom.xml
+++ b/extensions/spring/spring-boot-autoconfigure/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.axonframework.extensions.spring</groupId>
         <artifactId>axon-spring-extension</artifactId>
-        <version>5.0.2</version>
+        <version>5.0.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>axon-spring-boot-autoconfigure</artifactId>
@@ -301,8 +301,4 @@
             </plugin>
         </plugins>
     </build>
-
-  <scm>
-    <tag>axon-5.0.2</tag>
-  </scm>
 </project>
