--- a/extensions/metrics/metrics-micrometer/pom.xml
+++ b/extensions/metrics/metrics-micrometer/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.axonframework.extensions.metrics</groupId>
         <artifactId>axon-metrics-extension</artifactId>
-        <version>5.0.2</version>
+        <version>5.0.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>axon-metrics-micrometer</artifactId>
@@ -74,8 +74,4 @@
             </plugin>
         </plugins>
     </build>
-
-  <scm>
-    <tag>axon-5.0.2</tag>
-  </scm>
 </project>
