--- a/extensions/metrics/pom.xml
+++ b/extensions/metrics/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.axonframework.extensions</groupId>
         <artifactId>axon-extensions</artifactId>
-        <version>5.0.2</version>
+        <version>5.0.3-SNAPSHOT</version>
     </parent>
 
     <groupId>org.axonframework.extensions.metrics</groupId>
@@ -83,8 +83,4 @@
             </plugin>
         </plugins>
     </build>
-
-  <scm>
-    <tag>axon-5.0.2</tag>
-  </scm>
 </project>
