--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.axonframework</groupId>
         <artifactId>axon-parent</artifactId>
-        <version>5.0.2</version>
+        <version>5.0.3-SNAPSHOT</version>
         <relativePath>../build/parent/pom.xml</relativePath>
     </parent>
 
@@ -38,8 +38,4 @@
         <module>metrics</module>
         <module>tracing</module>
     </modules>
-
-  <scm>
-    <tag>axon-5.0.2</tag>
-  </scm>
 </project>
