--- a/extensions/tracing/tracing-opentelemetry/pom.xml
+++ b/extensions/tracing/tracing-opentelemetry/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.axonframework.extensions.tracing</groupId>
         <artifactId>axon-tracing-extension</artifactId>
-        <version>5.0.2</version>
+        <version>5.0.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>axon-tracing-opentelemetry</artifactId>
@@ -70,8 +70,4 @@
             </plugin>
         </plugins>
     </build>
-
-  <scm>
-    <tag>axon-5.0.2</tag>
-  </scm>
 </project>
