--- a/update/pom.xml
+++ b/update/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.axonframework</groupId>
         <artifactId>axon-parent</artifactId>
-        <version>5.0.2</version>
+        <version>5.0.3-SNAPSHOT</version>
         <relativePath>../build/parent/pom.xml</relativePath>
     </parent>
 
@@ -96,8 +96,4 @@
             </plugin>
         </plugins>
     </build>
-
-  <scm>
-    <tag>axon-5.0.2</tag>
-  </scm>
 </project>
