--- a/examples/university-java/pom.xml
+++ b/examples/university-java/pom.xml
@@ -103,6 +103,11 @@
             <version>6.0.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.axonframework</groupId>
+            <artifactId>axon-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 </project>
