--- a/eventsourcing/pom.xml
+++ b/eventsourcing/pom.xml
@@ -55,6 +55,11 @@
         </dependency>
         <!-- Serialization -->
         <dependency>
+            <groupId>tools.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <scope>test</scope>
