--- a/hibernate-6-integrationtests/pom.xml
+++ b/hibernate-6-integrationtests/pom.xml
@@ -72,6 +72,11 @@
         </dependency>
         <!-- Serialization -->
         <dependency>
+            <groupId>tools.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <optional>true</optional>
