--- a/integrationtests/pom.xml
+++ b/integrationtests/pom.xml
@@ -71,6 +71,11 @@
 
         <!-- Serialization -->
         <dependency>
+            <groupId>tools.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <optional>true</optional>
