--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,9 @@
         <module>test</module>
         <module>tracing-opentelemetry</module>
         <module>spring-boot3-dummy</module>
+        <module>hibernate-6-integrationtests</module>
+        <module>spring-boot-3-integrationtests</module>
+        <module>spring-boot-4-integrationtests</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -66,6 +69,7 @@
     <properties>
         <!-- Main -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>17</java.version>
         <sonar.coverage.jacoco.xmlReportPaths>
             ${project.basedir}/coverage-report/target/site/jacoco-aggregate/jacoco.xml,
             ${project.basedir}/../coverage-report/target/site/jacoco-aggregate/jacoco.xml
@@ -117,10 +121,11 @@
         <projectreactor.version>3.7.8</projectreactor.version>
         <reactive.streams.spec.version>1.0.4</reactive.streams.spec.version>
         <!-- Serialization -->
-        <avro.version>1.11.4</avro.version><!-- Don't upgrade due to JDK8, the JDK11+ version is defined in profile below -->
+        <avro.version>1.12.0</avro.version>
         <dom4j.version>2.1.5</dom4j.version>
         <gson.version>2.13.1</gson.version>
         <jackson.version>2.19.2</jackson.version>
+        <jackson3.version>3.0.3</jackson3.version>
         <xstream.version>1.4.21</xstream.version>
         <!-- Scheduling -->
         <db-scheduler.version>13.0.0</db-scheduler.version><!-- Don't upgrade due to JDK8 -->
@@ -262,6 +267,12 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
                 <version>${hibernate-core.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.glassfish.jaxb</groupId>
+                        <artifactId>jaxb-runtime</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.hibernate.orm</groupId>
@@ -449,6 +460,13 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>tools.jackson</groupId>
+                <artifactId>jackson-bom</artifactId>
+                <version>${jackson3.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <!-- Spring -->
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -583,8 +601,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler.version}</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <encoding>UTF-8</encoding>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
@@ -645,12 +663,12 @@
                 <configuration>
                     <publishingServerId>central</publishingServerId>
                     <excludeArtifacts>
-                        axon-integrationtests,axon-reactorless-test,axon-hibernate-6-integrationtests,axon-spring-boot3-dummy,axon-spring-boot-3-integrationtests
+                        axon-integrationtests,axon-reactorless-test,axon-hibernate-6-integrationtests,axon-spring-boot3-dummy,axon-spring-boot-3-integrationtests,axon-spring-boot-4-integrationtests
                     </excludeArtifacts>
                 </configuration>
             </plugin>
             <plugin>
-                <!-- just to make sure deployed artifacts are always built (and tested) using JDK 8+ -->
+                <!-- just to make sure deployed artifacts are always built (and tested) using JDK 17+ -->
                 <artifactId>maven-enforcer-plugin</artifactId>
                 <executions>
                     <execution>
@@ -662,7 +680,7 @@
                         <configuration>
                             <rules>
                                 <requireJavaVersion>
-                                    <version>1.8</version>
+                                    <version>17</version>
                                 </requireJavaVersion>
                                 <requireMavenVersion>
                                     <version>3.5</version>
@@ -802,29 +820,6 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>
-
-        <profile>
-            <id>java11-modules</id>
-            <activation>
-                <jdk>[11,)</jdk>
-            </activation>
-            <properties>
-                <avro.version>1.12.0</avro.version>
-            </properties>
-            <modules>
-                <module>hibernate-6-integrationtests</module>
-            </modules>
-        </profile>
-
-        <profile>
-            <id>java17-modules</id>
-            <activation>
-                <jdk>[17,)</jdk>
-            </activation>
-            <modules>
-                <module>spring-boot-3-integrationtests</module>
-            </modules>
         </profile>
 
         <profile>
