Update and expand the TagsUtils
- Replace payloadType for messageType throughout
- Align MessageCountingMonitor naming with Dropwizard version
- Align MessageTimerMonitor naming iwth Dropwizard version
- Fix JavaDoc
- Add NoOp tagger
- Add processorName tagger
- Add processor tagger
- Align and clean-up tests using TagsUtil

We should remove the GlobalMetricRegistry and MetricsConfigurerModule in
 favor of a ConfigurationEnhancer. This enhancer should marry the logic
 of enhancing and registering the right set of monitors.

--- a/extensions/metrics/metrics-micrometer/pom.xml
+++ b/extensions/metrics/metrics-micrometer/pom.xml
@@ -58,6 +58,21 @@
             <artifactId>jsr305</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!-- Test -->
+        <dependency>
+            <groupId>org.axonframework</groupId>
+            <artifactId>axon-common</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.axonframework</groupId>
+            <artifactId>axon-messaging</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
