--- a/migration/pom.xml
+++ b/migration/pom.xml
@@ -48,10 +48,21 @@
         <dependency>
             <groupId>org.axonframework</groupId>
             <artifactId>axon-messaging</artifactId>
-            <!-- Version is intended as the recipe is to migrate to AF 4.7 -->
-            <version>4.7.6</version>
-            <scope>test</scope>
+            <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.axonframework</groupId>
+            <artifactId>axon-eventsourcing</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>org.axonframework</groupId>-->
+<!--            <artifactId>axon-messaging</artifactId>-->
+<!--            &lt;!&ndash; Version is intended as the recipe is to migrate to AF 4.7 &ndash;&gt;-->
+<!--            <version>4.7.6</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.openrewrite.recipe</groupId>
             <artifactId>rewrite-migrate-java</artifactId>
