--- a/spring-boot-4-integrationtests/pom.xml
+++ b/spring-boot-4-integrationtests/pom.xml
@@ -25,7 +25,7 @@
     </parent>
 
     <artifactId>axon-spring-boot-4-integrationtests</artifactId>
-
+    <version>4.13.0-SNAPSHOT</version>
 
     <name>Axon Framework - Spring Boot 4 Integration Tests</name>
     <description>
