--- a/spring-boot-4-integrationtests/pom.xml
+++ b/spring-boot-4-integrationtests/pom.xml
@@ -25,7 +25,6 @@
     </parent>
 
     <artifactId>axon-spring-boot-4-integrationtests</artifactId>
-    <version>4.13.0-SNAPSHOT</version>
 
     <name>Axon Framework - Spring Boot 4 Integration Tests</name>
     <description>
@@ -37,7 +36,6 @@
         <maven.deploy.skip>true</maven.deploy.skip>
 
         <!-- Main -->
-        <axon.version>${project.version}</axon.version>
         <spring.version>7.0.0</spring.version>
         <spring.boot.version>4.0.0</spring.boot.version>
         <spring-security.version>7.0.0</spring-security.version>
@@ -58,26 +56,26 @@
         <dependency>
             <groupId>org.axonframework</groupId>
             <artifactId>axon-spring-boot-autoconfigure</artifactId>
-            <version>${axon.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.axonframework</groupId>
             <artifactId>axon-messaging</artifactId>
-            <version>${axon.version}</version>
+            <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.axonframework</groupId>
             <artifactId>axon-eventsourcing</artifactId>
-            <version>${axon.version}</version>
+            <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.axonframework</groupId>
             <artifactId>axon-spring</artifactId>
-            <version>${axon.version}</version>
+            <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
@@ -286,7 +284,7 @@
         <dependency>
             <groupId>org.axonframework</groupId>
             <artifactId>axon-test</artifactId>
-            <version>${axon.version}</version>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
