[maven-release-plugin] prepare for next development iteration

--- a/spring-boot-4-integrationtests/pom.xml
+++ b/spring-boot-4-integrationtests/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>axon</artifactId>
         <groupId>org.axonframework</groupId>
-        <version>4.13.0</version>
+        <version>4.13.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>axon-spring-boot-4-integrationtests</artifactId>
