Ensure apidocs work for AF4.13
Ensure apidocs work for AF4.13. To that end, we should enable legacy
mode, per the move to JDK17. Furthermore, we should skip quite some
modules from the apidocs build, as those aren't required.

--- a/pom.xml
+++ b/pom.xml
@@ -861,6 +861,8 @@
                         </executions>
                         <configuration>
                             <doclint>none</doclint>
+                            <legacyMode>true</legacyMode>
+                            <skippedModules>axon-integrationtests,axon-reactorless-test,axon-hibernate-6-integrationtests,axon-spring-boot3-dummy,axon-spring-boot-3-integrationtests,axon-spring-boot-4-integrationtests</skippedModules>
                             <!-- These parameters are in preparation for resolution of this issue: -->
                             <!-- https://bugs.openjdk.java.net/browse/JDK-8068562 -->
                             <tags>
