Add JDK25 to the build
Add JDK25 to the build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,9 @@ jobs:
           - java-version: 21
             sonar-enabled: true
             deploy-enabled: true
+          - java-version: 25
+            sonar-enabled: false
+            deploy-enabled: false
 
     steps:
       - name: Checkout code
