Add JDK25 to the examples build
Add JDK25 to the examples build

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -20,6 +20,7 @@ jobs:
       matrix:
         include:
           - java-version: 21
+          - java-version: 25
 
     steps:
       - name: Checkout code
