docs: add CLAUDE.md and AGENTS.md for AI assistant guidance and project overview
- Added `AGENTS.md` to outline the project structure, architecture, coding conventions, and guidelines for AI-based contributors.
- Updated `.gitignore` to include related files and directories under `.claude/` and `.ai/temp`.
- Introduced `CLAUDE.md` in the `docs/af5-getting-started` directory to provide AI assistant guidance specific to the Axon Framework 5 Getting Started documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -22,14 +22,6 @@ axon.iws
 # documentation's local bulid
 docs/_playbook/build
 
-# AI ASSISTANT - Claude Code
-CLAUDE.md
-.claude/
-.mcp.json
-
-# AI ASSISTANT - Kiro
-.kiro
-
-# AI ASSISTANT - Cursor
-.vscode
-.cursor
+# Claude Code
+.claude/settings.local.json
+.ai/temp
