--- a/eventsourcing/pom.xml
+++ b/eventsourcing/pom.xml
@@ -99,6 +99,11 @@
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.tngtech.archunit</groupId>
+            <artifactId>archunit-junit5</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.ehcache</groupId>
