✨ feat(extensions): add `axon-spring-boot-starter-test` with `AxonTestFixture` bean support
Introduce a new `axon-spring-boot-starter-test` module under `extensions/spring`
providing Spring Boot test infrastructure for Axon Framework applications.

- `@AxonSpringBootTest` — meta-annotation combining `@SpringBootTest` with Axon
  test infrastructure; forwards all `SpringBootTest` attributes via `@AliasFor`
- `AxonTestConfiguration` — package-private `@TestConfiguration` that registers
  `MessagesRecordingConfigurationEnhancer` and exposes `AxonTestFixture` as a
  bean injectable directly into test constructors
- `AxonTestFixture.Customization` can be overridden by declaring a bean of that
  type in a test-local `@TestConfiguration`; resolved via `ObjectProvider` with
  a default fallback

--- a/extensions/spring/pom.xml
+++ b/extensions/spring/pom.xml
@@ -34,6 +34,7 @@
         <module>spring</module>
         <module>spring-boot-autoconfigure</module>
         <module>spring-boot-starter</module>
+        <module>spring-boot-starter-test</module>
     </modules>
 
     <dependencyManagement>
@@ -53,6 +54,12 @@
             <dependency>
                 <groupId>org.axonframework.extensions.spring</groupId>
                 <artifactId>axon-spring-boot-starter</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.axonframework.extensions.spring</groupId>
+                <artifactId>axon-spring-boot-starter-test</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
