✅ test: add `AxonSpringBootTest` annotation tests verifying fixture injection and customization override
Add two test classes to `axon-spring-boot-starter-test` covering the scenarios
identified as missing in the PR review:

`AxonSpringBootTestAnnotationTest`
- verifies `AxonTestFixture` is available as an injectable Spring bean
- exercises a full given-when-then flow with a real command handler and result assertion

`AxonSpringBootTestCustomizationOverrideTest`
- verifies that a user-provided `AxonTestFixture.Customization` bean overrides the
  default customization in `AxonTestConfiguration`
- uses behavioral verification: a field filter ignoring `Pong.nonce` is registered
  via `CustomizationOverride`; the handler returns a random nonce, and the fixture
  assertion passes despite the mismatch — proving the customization was applied

Key discovery: `@TestConfiguration` static inner classes are only auto-detected
by Spring Boot when `classes` is NOT set on `@SpringBootTest`. When `classes` is
explicitly specified, the `@TestConfiguration` class must also be listed in
`classes` to be included in the context (e.g. `classes = {TestApplication.class,
CustomizationOverride.class}`).

Also adds `axon-spring-boot-autoconfigure` as a test-scoped dependency so that
the full Axon auto-configuration is available during test execution.

--- a/extensions/spring/spring-boot-starter-test/pom.xml
+++ b/extensions/spring/spring-boot-starter-test/pom.xml
@@ -49,6 +49,14 @@
             <artifactId>junit-jupiter-api</artifactId>
         </dependency>
 
+        <!-- Test dependencies -->
+        <dependency>
+            <groupId>org.axonframework.extensions.spring</groupId>
+            <artifactId>axon-spring-boot-autoconfigure</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
